# llama-pinecone-mcp-0

./: pyproject.toml
src/llama_pinecone_mcp_0/: __init__.py  llama_pinecone_mcp_0.py
