[project]
name = "llama-pinecone-mcp-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "evan@ivc.media" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.3.1",
    "llama-index>=0.12.35",
    "llama-index-vector-stores-pinecone>=0.4.5",
    "llama-parse>=0.6.12",
    "openai>=1.78.0",
    "pinecone>=6.0.2",
    "pydantic>=2.11.4",
]

[project.scripts]
llama-pinecone-mcp-0 = "llama_pinecone_mcp_0:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
